structured the notebook by the modalities

--- a/data/Data_exploration.ipynb
+++ b/data/Data_exploration.ipynb
@@ -10,10 +10,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8b379b25",
+   "metadata": {},
+   "source": [
+    "This jupyter notebook deals with exploring the data for my research project within the MSc05 course in the Neurocognitive Psychology lab at Goethe University Frankfurt within the psychology master. \n",
+    "\n",
+    "The main idea of the project is to use machine learning in order to predict whether a person can be classified either as a healthy control or a patient with psychotic disorder based on cortical features that are associated with brain network development.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd6c9739",
+   "metadata": {},
+   "source": [
+    "## Table of contents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51b8029d",
+   "metadata": {},
+   "source": [
+    "The notebook is structured as followed.\n",
+    "\n",
+    "### **1. Data access**\n",
+    "### **2. What does the data contain?**\n",
+    "### **3. Exploring the different modalities**\n",
+    "        3.1 DTI Networks\n",
+    "            3.1.1 Downloading the .mat files\n",
+    "            3.1.2 Read the .mat files\n",
+    "        3.2 Regional mean diffusivity (MD) and functional anisotropy (FA) values\n",
+    "        3.3 sMRT: Cortical thickness (CT)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b0d27a69",
    "metadata": {},
    "source": [
-    "### Data access"
+    "### 1. Data access"
    ]
   },
   {
@@ -35,7 +71,7 @@
    "id": "1f58425b",
    "metadata": {},
    "source": [
-    "### What does the data contain?"
+    "### 2. What does the data contain?"
    ]
   },
   {
@@ -48,10 +84,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e75fa436",
+   "metadata": {},
+   "source": [
+    "### 3. Exploring the different modalities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2ba0be6",
+   "metadata": {},
+   "source": [
+    "First of all, I am going to explore the DTI network data, followed by the regional MD and FA values and lastly the CT data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48a0094c",
+   "metadata": {},
+   "source": [
+    "### 3.1 DTI Networks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86c38d60",
+   "metadata": {},
+   "source": [
+    "The data that contains the DTI networks are available as matlab files. In the following, it is depicted how the matlab files can be downloaded and read."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "10e5161d",
    "metadata": {},
    "source": [
-    "### Download the .mat files"
+    "####  3.1.1 Download the .mat files"
    ]
   },
   {
@@ -141,7 +209,7 @@
    "id": "cc431cb7",
    "metadata": {},
    "source": [
-    "Read in mat files"
+    "#### 3.1.2 Read the .mat files"
    ]
   },
   {
@@ -301,11 +369,27 @@
     "plt.figure(figsize=(10,7))\n",
     "sns.heatmap(DTI_Dublin['nostreamlines_new'][0][0], xticklabels=False, cmap='rocket')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8341741f",
+   "metadata": {},
+   "source": [
+    "### 3.2 Regional Mean diffusivity (MD) and functional anisotropy (FA) values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cc737cc",
+   "metadata": {},
+   "source": [
+    "### 3.3 sMRT: cortical thickness"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('bb8')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -319,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.0"
   },
   "vscode": {
    "interpreter": {
