provided download info

--- a/data/Data_exploration.ipynb
+++ b/data/Data_exploration.ipynb
@@ -127,7 +127,7 @@
    "id": "04d01d26",
    "metadata": {},
    "source": [
-    "Link des weiter verweisenden Links auf figshare kopieren, wenn ursprünglicher Link nur preview anzeigt."
+    "If you click on the name of the matlab datafile on figshare , it then only shows you the preview of the matlab file and the link of that is for the respective preview. If you want to copy the link of the matlab file itself, you have to right-click on the datafile name and then copy the link."
    ]
   },
   {
