restructured and further infos

--- a/data/Data_exploration.ipynb
+++ b/data/Data_exploration.ipynb
@@ -2,25 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "97761504",
-   "metadata": {},
-   "source": [
-    "## Data exploration for MSc5_research_project "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8b379b25",
-   "metadata": {},
-   "source": [
-    "This jupyter notebook deals with exploring the data for my research project within the MSc05 course in the Neurocognitive Psychology lab at Goethe University Frankfurt within the psychology master. \n",
-    "\n",
-    "The main idea of the project is to use machine learning in order to predict whether a person can be classified either as a healthy control or a patient with psychotic disorder based on cortical features that are associated with brain network development.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "fd6c9739",
    "metadata": {},
    "source": [
@@ -46,10 +27,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "97761504",
+   "metadata": {},
+   "source": [
+    "# Data exploration for MSc5_research_project "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b379b25",
+   "metadata": {},
+   "source": [
+    "This jupyter notebook deals with exploring the data for my research project within the MSc05 course in the Neurocognitive Psychology lab at Goethe University Frankfurt within the psychology master degree program. \n",
+    "\n",
+    "The main idea of the project is to use machine learning in order to predict whether a person can be classified either as a healthy control or a patient with psychotic disorder based on different MRI metrics and to see which of them provides more accuracy. \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b0d27a69",
    "metadata": {},
    "source": [
-    "### 1. Data access"
+    "## 1. Data access"
    ]
   },
   {
@@ -57,11 +59,7 @@
    "id": "27f11691",
    "metadata": {},
    "source": [
-    "The data set is available on figshare (see link) and was used for the paper \"Functional MRI connectivity accurately distinguishes cases with psychotic disorders from healthy controls, based on cortical features associated with brain network development\" (Young et al., 2020). https://doi.org/10.1101/19009894\n",
-    "\n",
-    "https://figshare.com/articles/dataset/Data_for_Functional_MRI_connectivity_accurately_distinguishes_cases_with_psychotic_disorders_from_healthy_controls_based_on_cortical_features_associated_with_brain_network_development_/12361550 \n",
-    "\n",
-    "Further, the github repository for the above mentioned study can be accessed via the following link: https://github.com/jmyoung36/fMRI_connectivity_accurately_distinguishes_cases\n",
+    "The data I am going to use for the project is available on [figshare](https://figshare.com/articles/dataset/Data_for_Functional_MRI_connectivity_accurately_distinguishes_cases_with_psychotic_disorders_from_healthy_controls_based_on_cortical_features_associated_with_brain_network_development_/12361550) and orginates from the paper \"Functional MRI connectivity accurately distinguishes cases with psychotic disorders from healthy controls, based on cortical features associated with brain network development\" by [Young et al. (2020)](https://doi.org/10.1101/19009894). The github repository for the study can be accessed [here](https://github.com/jmyoung36/fMRI_connectivity_accurately_distinguishes_cases).\n",
     "\n",
     "\n"
    ]
@@ -71,7 +69,7 @@
    "id": "1f58425b",
    "metadata": {},
    "source": [
-    "### 2. What does the data contain?"
+    "## 2. What does the data contain? General overview"
    ]
   },
   {
@@ -79,7 +77,16 @@
    "id": "c451ba9c",
    "metadata": {},
    "source": [
-    "The pre-processed data contains five MRI metrics being regional CT (cortical thickness), MD (mean diffusivity) and FA (functional anisotropy) values as well as DTI networks. There are datasets for different locations. CT is available for the Maastricht, Dublin and Cobre datasets whereas MD, FA and DTI are available for the Maastricht and Dublin datasets. Demographic data is also provided."
+    "The already pre-processed data contains different metrics for three different locations being Dublin, Maastricht and Cobre. \n",
+    "\n",
+    "For the **macro-structural** data ***cortical thickness (CT)*** was estimated for 308 cortical regions according to a derived version of the Desikian-Killiany atlas [(Desikan, 2006)](www.lalal). The files for the derived and adjusted atlas can be found in this [github repository](lala). \n",
+    "\n",
+    "The **micro-structural** data contains diffusion weighted images (DWI) from which regional cortical measures such as ***mean diffusivity (MD)*** and ***fractional anisotropy (FA)*** were estimated. \n",
+    "\n",
+    "There are further metrics such as ***functional magnet resonance imaging data (fMRI), fMRI connectivity and network data*** and ***structural connectivity*** and ***DWI tractography***. For project purposes, only the **macro and micro-structural data** will be used. On top of that, the data for only Dublin is going to be explored since it provides the best image quality (see Table 1 in [Young et al., 2020)](https://doi.org/10.1101/19009894) and not every modality was assessed for the Cobre dataset. \n",
+    "\n",
+    "\n",
+    "being regional CT (cortical thickness), MD (mean diffusivity) and FA (functional anisotropy) values as well as DTI networks. There are datasets for different locations. CT is available for the Maastricht, Dublin and Cobre datasets whereas MD, FA and DTI are available for the Maastricht and Dublin datasets. Demographic data is also provided."
    ]
   },
   {
