--- a/data/Data_analysis.ipynb
+++ b/data/Data_analysis.ipynb
@@ -37,17 +37,41 @@
    "id": "feddd06e",
    "metadata": {},
    "source": [
-    "Following the scikit-learn algorhitm cheat-sheet, for the data at hand the performance of a **linear SVM** is recommended. The data contains more than 50 participants (samples), the aim is to predict a category (control/patient) and the data is labeled. \n",
+    "Following the scikit-learn algorhitm cheat-sheet, for the data at hand the performance of a **linear Support vector machine (SVM)** is recommended. The data contains more than 50 participants (samples), the aim is to predict a category (control/patient) and the data is labeled. \n",
     "Since I want to use the given information regarding the labels for each sample, the learning problem is **supervised**. Considering the task type, our purpose is to classify the samples in two categories being control and patient. Hence, the task type is **classification**."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72b7e866",
+   "cell_type": "markdown",
+   "id": "338e7f19",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**SVMs** are a set of supervised learning methods used that can be used for classifcation, regression and outliers detection (for further information click [here](https://scikit-learn.org/stable/modules/svm.html)). The basic idea is to find an optimal separating line (or hyperplane) as output that separates the data into two classes. The **SVM** algorithm looks for the data points that are the clostest to the line from both classes. These points are called support vectors. Then, the distance between the support vectors and the hyperplane which is called the margin is computed. To find the best and optimal hyperplane, the margin should be maximized. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8f9a284",
+   "metadata": {},
+   "source": [
+    "**Support vector classification(SVC)** or **Linear Support vector classification (LinearSVC)** are methods of **SVMs** making it feasible to perfom a binary or mulit-class classification on a dataset. For the purpose of this project, **LinearSVC** is going to be performed. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d00e1ea",
+   "metadata": {},
+   "source": [
+    "### 1.1 Macro-structural data: Cortical Thickness (CT)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e65c0b59",
+   "metadata": {},
+   "source": [
+    "First of all, I use **CT** data as my input data for the classification. "
+   ]
   },
   {
    "cell_type": "code",
@@ -55,7 +79,9 @@
    "id": "b0ce6f5b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#load the CT data\n"
+   ]
   },
   {
    "cell_type": "code",
