--- a/data/Data_analysis.ipynb
+++ b/data/Data_analysis.ipynb
@@ -84,7 +84,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "neuro_ai",
    "language": "python",
    "name": "python3"
   },
@@ -98,11 +98,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.0 | packaged by conda-forge | (default, Nov 12 2018, 12:34:36) \n[Clang 4.0.1 (tags/RELEASE_401/final)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "578504114d49301275c44c87035f08411733f9928d9347745d7de100c09f7611"
+    "hash": "197750af2f3e6af0bfce9c7aa609a0a9c4ddab34bbe7a4296d7aadbc15871ba4"
    }
   }
  },
