--- a/data/Data_analysis.ipynb
+++ b/data/Data_analysis.ipynb
@@ -42,36 +42,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72b7e866",
+   "cell_type": "markdown",
+   "id": "39ec94cf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "SVMs are a set of supervised learning methods used that can be used for classifcation, regression and outliers detection (for further information click here). The basic idea is to find an optimal separating line (or hyperplane) as output that separates the data into two classes. The SVM algorithm looks for the data points that are the clostest to the line from both classes. These points are called support vectors. Then, the distance between the support vectors and the hyperplane which is called the margin is computed. To find the best and optimal hyperplane, the margin should be maximized."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0ce6f5b",
+   "cell_type": "markdown",
+   "id": "f6072035",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Support vector classification(SVC) or Linear Support vector classification (LinearSVC) are methods of SVMs making it feasible to perfom a binary or mulit-class classification on a dataset. For the purpose of this project, LinearSVC is going to be performed."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63f694c5",
+   "cell_type": "markdown",
+   "id": "0c0db7b7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 1.1 Macro-structural data: Cortical Thickness (CT)\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e01a3903",
+   "cell_type": "markdown",
+   "id": "5a9b0626",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "First of all, I use CT data as my input data for the classification.\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -84,7 +84,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "neuro_ai",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -98,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0 | packaged by conda-forge | (default, Nov 12 2018, 12:34:36) \n[Clang 4.0.1 (tags/RELEASE_401/final)]"
+   "version": "3.7.0"
   },
   "vscode": {
    "interpreter": {
