--- a/data/Data_exploration.ipynb
+++ b/data/Data_exploration.ipynb
@@ -6502,7 +6502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.0 | packaged by conda-forge | (default, Nov 12 2018, 12:34:36) \n[Clang 4.0.1 (tags/RELEASE_401/final)]"
   },
   "vscode": {
    "interpreter": {
